--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
     "lodash": "^4.17.20",
+    "ng-block-ui": "^3.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "stream": "0.0.2",
